--- a/core/app/views/Products/_products.html
+++ b/core/app/views/Products/_products.html
@@ -19,7 +19,9 @@
     #{list items:prods, as:'prod'}
       <tr data-toggle="collapse" data-target="#prod_details_${prod.sku}">
         <td height="60px;">
-          <img src="https://kod.easya.cc/data/User/elcuk2/home/SKU/${prod.sku}/0.jpg">
+          <a href="https://kod.easya.cc/data/User/elcuk2/home/SKU/${prod.sku}/0.jpg" target="_blank">
+            <img src="https://kod.easya.cc/data/User/elcuk2/home/SKU/${prod.sku}/0.jpg">
+          </a>
         </td>
         <td><a target="_blank" href="@{Products.show(prod.sku)}">${prod.sku}</a></td>
         <td>${prod.family?.family}</td>
