--- a/core/app/views/MaterialPlans/index.html
+++ b/core/app/views/MaterialPlans/index.html
@@ -8,7 +8,7 @@
 #{errorMsgs /}
 
 <!-- 搜索form begin -->
-#{form @DeliverPlans.index(), class:'search_form', id:'deliverys_form'}
+#{form @MaterialPlans.index(), class:'search_form', id:'deliverys_form'}
 <div class="row-fluid">
   <div class="span12">
     <div class="input-prepend input-append inline">
