物料出货单优化

--- a/core/app/views/MaterialOutbounds/_units.html
+++ b/core/app/views/MaterialOutbounds/_units.html
@@ -20,7 +20,7 @@
       #{/if}
     <td>${unit?.material?.code}</td>
     <td>${unit?.material?.name}</td>
-    <td>${unit?.material?.name}</td>
+    <td>${unit?.material?.cooperators()}</td> 
     <td>${unit?.material?.availableQty()}</td>
     <td>
     #{if is_check}
