--- a/core/app/views/BtbCustoms/createBtbOrderPage.html
+++ b/core/app/views/BtbCustoms/createBtbOrderPage.html
@@ -89,14 +89,6 @@
                   #{/list}
               </select>
             </th>
-            <th>其他费用:
-              <input type="text" style="width:60px;" name="b.btbOrderItemList[${i_index-1}].otherPrice" value="${i.otherPrice}" required>
-              <select style="width:100px;" name="b.btbOrderItemList[${i_index-1}].otherCurrency">
-                  #{list items:helper.Currency, as:'c'}
-                    <option value="${c.name()}" ${i.otherCurrency==c?'selected':''}>${c.name()}</option>
-                  #{/list}
-              </select>
-            </th>
             <td>
               <input type="button" class="btn btn-danger" name="deleteBtn" value="删除"/>
             </td>
@@ -125,14 +117,7 @@
               #{/list}
           </select>
         </td>
-        <td>其他价格:
-          <input type="text" style="width:60px;" name="b.btbOrderItemList[0].otherPrice" value="" required>
-          <select style="width:100px;" name="b.btbOrderItemList[0].otherCurrency">
-              #{list items:helper.Currency, as:'c'}
-                <option value="${c.name()}" #{if c.name()=='USD'} selected #{/if}>${c.name()}</option>
-              #{/list}
-          </select>
-        </td>
+
         <td>
           <input type="button" class="btn btn-danger" name="deleteBtn" value="删除"/>
         </td>
@@ -190,6 +175,41 @@
           </select>
         </td>
       </tr>
+      <tr>
+        <th>Pricing Term</th>
+        <td>
+          <select name="b.pricingTerm">
+            <option value="">请选择</option>
+          #{list items:models.market.BtbOrder.PT, as:'p'}
+            <option value="${p.name()}" ${b.pricingTerm==p?'selected':''}>${p.label()}</option>
+          #{/list}
+          </select>
+        </td>
+        <th>Port Of Shipment</th>
+        <td>
+          <select name="b.port">
+            <option value="">请选择</option>
+          #{list items:models.market.BtbOrder.P, as:'p'}
+            <option value="${p.name()}" ${b.port==p?'selected':''}>${p.name()}</option>
+          #{/list}
+          </select>
+        </td>
+      </tr>
+      <tr>
+        <th>其他费用</th>
+        <td>
+          <input type="text" style="width:60px;" name="b.otherPrice" value="${b.otherPrice}" required>
+          <select style="width:100px;" name="b.otherCurrency">
+          #{list items:helper.Currency, as:'c'}
+            <option value="${c.name()}" #{if c.name()=='USD'} selected #{/if}>${c.name()}</option>
+          #{/list}
+          </select>
+        </td>
+        <th>备注</th>
+        <td>
+          <input type="text" class="input-xxlarge" name="b.otherRemark" value="${b.otherRemark}">
+        </td>
+      </tr>
     </table>
   #{info_row title:'物流运输信息' /}
     <table class="table table-bordered">
@@ -224,28 +244,7 @@
           </select>
         </td>
       </tr>
-      <tr>
-        <th>Pricing Term</th>
-        <td>
-          <select name="b.pricingTerm">
-            <option value="">请选择</option>
-          #{list items:models.market.BtbOrder.PT, as:'p'}
-            <option value="${p.name()}" ${b.pricingTerm==p?'selected':''}>${p.label()}</option>
-          #{/list}
-          </select>
-        </td>
-        <th>Port Of Shipment</th>
-        <td>
-          <select name="b.port">
-            <option value="">请选择</option>
-          #{list items:models.market.BtbOrder.P, as:'p'}
-            <option value="${p.name()}" ${b.port==p?'selected':''}>${p.name()}</option>
-          #{/list}
-          </select>
-        </td>
-        <th></th>
-        <td></td>
-      </tr>
+
       <tr>
         <td>备注:</td>
         <td colspan="5">
