--- a/core/app/views/MaterialPlans/show.html
+++ b/core/app/views/MaterialPlans/show.html
@@ -1,6 +1,8 @@
 #{extends 'main_full.html'/}
 #{set title:"物料出货单 #" + dp.id /}
 #{set 'moreScripts'}
+  #{script 'jquery.filedrop.js'/}
+  #{script 'component/dropUpload.coffee'/}
   #{script 'materialPlans/edit.js'/}
   #{script 'deliveryments/show.coffee'/}
 #{/set}
@@ -9,7 +11,7 @@
 #{flash_alert /}
 
 
-#{info_row title:'物料采购单信息'/}
+#{info_row title:'物料出货单信息'/}
 
 <div class="row-fluid">
 
@@ -19,7 +21,7 @@
         <table class="table table-condensed table-bordered">
           <tr>
             <th>物料出库单ID</th>
-            <td><input type="text" name="dp.id" value="${dp?.id}" readonly/></td>
+            <td><input type="text" id="deliverymentId" name="dp.id" value="${dp?.id}" readonly/></td>
             <th>State</th>
             <td><input type="text" value="${dp?.state?.label()}" readonly></td>
           </tr>
@@ -156,7 +158,21 @@
   <input id='form_method' type="hidden" name="x-http-method-override" value="POST">
 </form>
 
+#{records records:records/}
 
+<div class="row-fluid">
+  <div class="span12">
+    <h4 class="alert alert-success">附件 <i class="icon-sort-down"></i></h4>
+  </div>
+</div>
+<div class="row-fluid">
+  <div style="min-height:300px;" class="span12 well" id="dropbox">
+    <ul class="thumbnails uploaded"></ul>
+  #{power.ck "products.edit"}
+    <div class="message" style="height:150px;padding-top:145px;text-align:center;">Drag & Drop</div>
+  #{/power.ck}
+  </div>
+</div>
 
 <!--  修改签收数量 弹出div begin   -->
 <div id="bom_modal" class="modal hide fade">
