--- a/core/app/views/MaterialPurchases/_unit_list.html
+++ b/core/app/views/MaterialPurchases/_unit_list.html
@@ -14,25 +14,15 @@
       <input type="checkbox" name="checkAll" data-index="${dpIndex}">
     </th>
   #{/if}
-    <th width="40px;">物料计划ID</th>
+    <th width="40px;">#</th>
     <th width="40px;">阶段</th>
     <th>物料编码</th>
     <th>物料名称</th>
-    <th>计划数量</th>
-    <th>交货数量</th>
-    <th>入库数量</th>
-    <th>可用库存</th>
-  #{ifnot deliveryplan}
+    <th>采购数</th>
+    <th>采购余量</th>
     <th>单价</th>
-    <th rel="popover" content="如果交货, 数量为交货数量, 如果没有交货,则为计划采购数量">
-      <abbr>总价</abbr>
-    </th>
-    <th>剩余请款金额</th>
-  #{/ifnot}
-    <th>预计交货时间</th>
-    <th>实际交货时间</th>
+    <th>总价</th>
     <th>Action</th>
-    <th>质检结果</th>
     <th>项目名称</th>
     <th>创建人</th>
     <th>创建时间</th>
@@ -53,25 +43,12 @@
     <td>${unit.material?.code}</td>
     <td>${unit.material?.name}</td>
     <td>${unit.planQty}</td>
-    <td>${unit.qty}</td>
-    <td>${unit.qty}</td>
     <td>${unit.availableQty}</td>
-      #{ifnot deliveryplan}
-        <td>${unit.planCurrency?.symbol()} ${unit.formatPrice().format('#,###.##')}</td>
-        <td>${unit.planCurrency?.symbol()} ${unit.totalAmount().format('#,###.##')}</td>
-        <td>0</td>
-      #{/ifnot}
-
-    <td>#{time_tooltip time:unit.planDeliveryDate/}</td>
-    <td>#{time_tooltip time:unit.deliveryDate/}</td>
+    <td>${unit.planCurrency?.symbol()} ${unit.formatPlanPrice().format('#,###.##')}</td>
+    <td>${unit.planCurrency?.symbol()} ${unit.totalAmount().format('#,###.##')}</td>
     <td>
       <a href="javascript:void(0)" name="unitUpdateBtn" class="btn btn-small btn-primary" uid="${unit.id}">修改</a>
-      <a href="@{MaterialUnits.destroy(unit.id)}" data-confirm="确认删除?" class="btn btn-small btn-danger"> 删除</a>
-    </td>
-    <td>
-      <a href="@{Inbounds.editByUnitId(unit.id)}" target="_blank">
-      ${unit.result?.label()}
-      </a>
+      <!-- <a href="@{MaterialUnits.destroy(unit.id)}" data-confirm="确认删除?" class="btn btn-small btn-danger"> 删除</a> -->
     </td>
     <td>${unit.projectName}</td>
     <td>${unit.handler?.username}</td>
