--- a/core/app/views/MaterialPurchases/blank.html
+++ b/core/app/views/MaterialPurchases/blank.html
@@ -11,35 +11,42 @@
 
 <table class="table table-condensed table-bordered">
   <tr>
-    <th>采购单名称</th>
-    <td>
-      <input type="text" name="purchase.name" value="" required>
+    <th>采购单名称<span style="color:red">*</span></th>
+    <td colspan="5">
+      <input type="text" name="purchase.name" style="width: 240px;" required>
     </td>
-    <th>物料名称</th>
+  </tr>
+  <tr>
+    <th>物料编码</th>
     <td>
-      <select name="units[0].material.id" id="unit_material" class="inline selectize" style="width:150px;">
+      <select name="units[0].material.id" id="unit_material" class="inline selectize" style="width:250px;">
         <option value="">请选择</option>
           #{list items:materials, as:'m'}
-            <option value="${m.id}">${m.name}</option>
+            <option value="${m.id}">${m.code}</option>
           #{/list}
       </select>
     </td>
-    <th>物料编码</th>
-    <td><input type="text" name="units[0].material.code" id="materialCode" readonly></td>
+    <th>物料名称</th>
+    <td><input type="text" name="units[0].material.name" id="materialName" readonly></td>
+    <th>供应商<span style="color:red">*</span></th>
+    <td>
+      <select name="purchase.cooperator.id" required>
+      </select>
+    </td>
   </tr>
 
   <tr>
-    <th>供应商</th>
+    <th>采购数量<span style="color:red">*</span></th>
     <td>
-      <select name="purchase.cooperator.id">
-      </select>
-    </td>
-    <th>采购数量</th>
-    <td>
-      <input type="text" class="input-mini" placeHolder="具体数量" name="units[0].planQty">
+      <input type="text" class="input-mini" placeHolder="具体数量" name="units[0].planQty" required>
       <input type="text" id="box_num" name="box_size" class="input-mini" placeHolder="箱数" boxSize="">
       <span class="add-on">箱</span>
-      <input type="hidden" name="units[0].attrs.qty">
+    </td>
+    <th>价格<span style="color:red">*</span></th>
+    <td>
+      <input type="text" class="span1 inline" id="unit_price" name="units[0].planPrice">
+        #{pickCurrency id:'unit_currency', name:'units[0].planCurrency',class: 'span1 inline',
+        c:units[0]?.currency?:helper.Currency.CNY, native: 'aaa'/}
     </td>
     <th>所属公司</th>
     <td colspan="3">
@@ -53,24 +60,9 @@
       </select>
     </td>
   </tr>
-  <tr>
-    <th>价格</th>
-    <td>
-      <input type="text" class="span1 inline" id="unit_price" name="units[0].planPrice">
-        #{pickCurrency id:'unit_currency', name:'units[0].attrs.planCurrency',class: 'span1 inline',
-        c:units[0]?.attrs?.currency?:helper.Currency.CNY, native: 'aaa'/}
-    </td>
-    <th>预计交货时间</th>
-    <td><input type="date" name="units[0].planDeliveryDate"></td>
-    <th></th>
-    <td></td>
-  </tr>
-  <tr>
-
-  </tr>
   <tr id="btn_tr">
     <th>备注</th>
-    <td colspan="4">
+    <td colspan="5">
       <textarea name="purchase.memo" rows="4" class="input-block-level"></textarea>
     </td>
   </tr>
@@ -92,27 +84,27 @@
 
 <script type="text/template" id="copy">
   <tr>
-    <th>物料名称 <span style="color:red"><%= num+1 %></span></th>
+    <th>物料编码<span style="color:red"><%= num+1 %></span></th>
     <td>
       <select></select>
     </td>
-    <th>物料编码</th>
+    <th>物料名称</th>
     <td colspan="3">
-      <input type="text" name="units[<%= num %>].material.code" readonly>
+      <input type="text" name="units[<%= num %>].material.name" readonly>
     </td>
   </tr>
   <tr>
-    <th>采购数量</th>
+    <th>采购数量<span style="color:red">*</span></th>
     <td>
-      <input type="text" class="input-mini" placeHolder="具体数量" name="units[<%= num %>].planQty">
+      <input type="text" class="input-mini" placeHolder="具体数量" name="units[<%= num %>].planQty" required>
       <input type="text" name="box_size" class="input-mini" placeHolder="箱数">
       <span class="add-on">箱</span>
     </td>
-    <th>价格</th>
+    <th>价格<span style="color:red">*</span></th>
     <td>
-      <input type="text" class="span1 inline" id="unit_price" name="units[<%= num %>].planPrice">
+      <input type="text" class="span1 inline" id="unit_price" name="units[<%= num %>].planPrice" required>
     #{pickCurrency id:'unit_currency', name:'units[<%= num %>].planCurrency',class: 'span1 inline',
-    c:units[0]?.attrs?.currency?:helper.Currency.CNY, native: 'aaa'/}
+    c:units[0]?.currency?:helper.Currency.CNY, native: 'aaa'/}
     </td>
     <th>所属公司</th>
     <td colspan="3">
