--- a/core/app/views/header.html
+++ b/core/app/views/header.html
@@ -95,7 +95,7 @@
                 #{power.ck "cooperators.index"}
                   <li><a href="@{Cooperators.index()}">合作伙伴</a></li>
                 #{/power.ck}
-                <li class="divider"></li>
+              <li class="divider"></li>
 
                 #{power.ck "deliveryments.index"}
                   <li><a href="@{MaterialPurchases.index()}">物料采购单</a></li>
@@ -144,6 +144,7 @@
                 #{power.ck "shipmentreports.lossrate"}
                   <li><a href="@{ShipmentReports.lossRateReport()}">运输丢失率统计报表</a></li>
                 #{/power.ck}
+              <li><a href="@{ShipmentReports.monthlyShipmentReport()}">单月物流发货量报表</a></li>
             </ul>
           </li>
         #{/power.ck}
@@ -215,11 +216,11 @@
                 #{/power.ck}
               <li class="divider"></li>
 
-              #{power.ck "deliveryments.index"}
-                <!-- <li><a href="@{MaterialUnits.indexWhouse()}">物料采购计划</a></li> -->
-                <li><a href="@{MaterialOutbounds.indexMaterial()}">物料库存管理</a></li>
-                <li><a href="@{MaterialOutbounds.index()}">物料出库</a></li>  
-              #{/power.ck}
+                #{power.ck "deliveryments.index"}
+                  <!-- <li><a href="@{MaterialUnits.indexWhouse()}">物料采购计划</a></li> -->
+                  <li><a href="@{MaterialOutbounds.indexMaterial()}">物料库存管理</a></li>
+                  <li><a href="@{MaterialOutbounds.index()}">物料出库</a></li>
+                #{/power.ck}
             </ul>
           </li>
         #{/power.ck}
