--- a/core/app/views/ShipmentReports/monthlyShipmentReport.html
+++ b/core/app/views/ShipmentReports/monthlyShipmentReport.html
@@ -1,13 +1,13 @@
 #{extends 'main_full.html' /}
-#{set title:'运输丢失率统计报表'/}
+#{set title:'单月物流发货量报表'/}
 #{set 'moreScripts'}
     #{script 'jquery.dataTables.js'/}
-    #{script 'ShipmentReports/lossRate.coffee'/}
+    #{script 'ShipmentReports/monthlyShipment.es6'/}
 #{/set}
 
 #{info_row}
 <ul>
-  <li><strong>运输丢失率统计报表</strong></li>
+  <li><strong>单月物流发货量报表</strong></li>
 </ul>
 #{/info_row}
 #{flash_alert /}
@@ -16,21 +16,23 @@
   <form action="@{ShipmentReports.monthlyShipmentReport()}" method="get" class="search_form" id='search_form'>
     <div class="row-fluid">
       <div class="span12">
-        <div class="input-prepend inline">
-          运输单:
-          <span class="add-on">From:</span>
+        <div class="input-prepend input-append inline">
+          <span class="add-on">预计运输时间From:</span>
           <input type="date" name="p.from" value="${p.from.date()}">
-        </div>
-
-        <div class="input-prepend inline">
           <span class="add-on">To:</span>
           <input type="date" name="p.to" value="${p.to.date()}">
         </div>
 
         <div class="input-append input-prepend inline">
+          <span class="add-on"><i class="icon-search"></i></span>
           <button class="btn btn-primary" data-loading>统计</button>
-          <button class="btn btn-primary" id="exceldown">导出未完全入库统计Excel</button>
         </div>
+
+        <div class="input-append input-prepend inline">
+          <span class="add-on"><i class="icon-file"></i></span>
+          <button class="btn btn-success" id="download_excel" data-url="@{Excels.exportMonthlyShipment()}">导出Excel</button>
+        </div>
+
       </div>
     </div>
   </form>
@@ -57,7 +59,7 @@
         <tr>
           <td>${dto.categoryId}</td>
           <td>${dto.sku}</td>
-          <td>${dto.market.label()}</td>
+          <td>${dto.market}</td>
           <td>${dto.centerId}</td>
           <td>${dto.seaQty}</td>
           <td>${dto.airQty}</td>
