调整selling的index页面宽度

--- a/core/app/views/Sellings/index.html
+++ b/core/app/views/Sellings/index.html
@@ -76,19 +76,19 @@
   <table class="table table-bordered table-condensed">
     <tr>
       <th><input type="checkbox" class="checkall"></th>
-      <th>编号</th>
-      <th width="360px;">SellingID</th>
+      <th>#</th>
+      <th width="330px;">SellingID</th>
       <th>SKU</th>
       <th>市场</th>
       <th>实时价格</th>
       <th>ASIN</th>
       <th>生命周期</th>
       <th>系统内上架</th>
-      <th>feed更新时间</th>
+      <th width="130px;">feed更新时间</th>
       <th>feed更新状态</th>
-      <th>创建时间</th>
-      <th>系统内下架时间</th>
-      <th>操作</th>
+      <th width="130px;">创建时间</th>
+      <th width="130px;">系统内下架时间</th>
+      <th width="180px;">操作</th>
     </tr>
   #{list items:sellings , as:'s'}
     <tr>
